# stapp-groq-models-chat

./: README.md  pyproject.toml
src/: main.py
src/components/: FileUploaders.py  GropApiKey.py  MessageController.py  Messages.py  ModalDialogs.py  ModelParameters.py  ModelSelector.py
src/functions/: GroqAPI.py  image_functions.py
src/pages/: 01_groq_models_info.py  02_groq_chatbot.py  03_image_description.py  11_groq_models_info.py  12_groq_chatbot.py  13_groq_image_description.py
